finally update overflow issue! whew

--- a/public/css/infinity-box.css
+++ b/public/css/infinity-box.css
@@ -3,6 +3,7 @@ body {
   background-color: rgb(58,59,62);
   padding: 0;
   margin: 0;
+  /* overflow-x: hidden; */
   background-image: url('../img/classroom.jpg');
   background-repeat: no-repeat;
   background-size: contain;
@@ -174,7 +175,7 @@ header.device-container .screen img {
   }
   header .header-content h1 {
     font-size: 90px;
-    color: #3CB371;
+    color: rgb(0, 186, 202);
     text-shadow: 2px 2px black;
   }
   header.device-container {
